# AdventOfCode2k19

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: ccpp.yml
src/: CMakeLists.txt  closest_intersection.cpp  fuel_calculator.cpp  gravity_assist.cpp  module.cpp  module.test.cpp
src/algorithm/: CMakeLists.txt
src/algorithm/include/algorithm/: cartesian_product.hpp
src/algorithm/src/: cartesian_product.test.cpp
src/intcode/: CMakeLists.txt  intcode.cpp  intcode.hpp  intcode.test.cpp
src/intcode/src/: intcode.cpp  intcode.test.cpp
src/intersect/: CMakeLists.txt
src/intersect/include/intersect/: direction.hpp  intersect.hpp  line.hpp  path.hpp  point.hpp
src/intersect/src/: direction.cpp  intersect.cpp  intersect.test.cpp  line.cpp  line.test.cpp  path.cpp  path.test.cpp  point.cpp  point.test.cpp
src/module/: CMakeLists.txt
src/module/include/module/: module.hpp
src/module/src/: module.cpp  module.test.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: timer.hpp
src/utils/src/: timer.cpp
